--- a/index.html
+++ b/index.html
@@ -111,9 +111,29 @@ console.log(Seu nome completo é: ${nome} ${sobrenome});</code></pre>
     <section class="card">
       <p class="numero">8.</p>
       <div class="descricao">
-        <p>Use <code>confirm()</code> para perguntar se o usuário quer se cadastrar.<br>
-        Se "OK", peça nome e idade com <code>prompt()</code>.<br>
-        Caso "Cancelar", exiba "Cadastro cancelado".</p>
+        <p>Crie um programa que:
+
+Pergunte ao usuário, com o comando confirm(), se ele deseja se cadastrar em um site.
+
+Se o usuário clicar em "OK", utilize prompt() para solicitar:
+
+O nome completo
+
+A idade
+
+Depois, exiba no console a seguinte mensagem:
+"Cadastro realizado com sucesso!
+  Nome: [nome]
+  Idade: [idade]"
+
+Se o usuário clicar em "Cancelar", exiba no console:  
+   "Cadastro cancelado pelo usuário."
+
+Dica para os alunos:
+
+confirm() retorna true se o usuário clicar em "OK" e false se clicar em "Cancelar".
+
+Pesquisar estrutura condicional if...else para tratar os dois casos.</p>
 
         <input type="checkbox" id="resposta8" class="toggle">
         <label for="resposta8" class="resposta-btn">Resposta</label>
