--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Dica para os alunos:
 
 confirm() retorna true se o usuário clicar em "OK" e false se clicar em "Cancelar".
 
-Pesquisar estrutura condicional if...else para tratar os dois casos.</p>
+<strong>Pesquisar estrutura condicional if...else para tratar os dois casos.</p></strong>
 
         <input type="checkbox" id="resposta8" class="toggle">
         <label for="resposta8" class="resposta-btn">Resposta</label>
