--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ Se o usuário clicar em "Cancelar", exiba no console:
 
 Dica para os alunos:
 
-confirm() retorna true se o usuário clicar em "OK" e false se clicar em "Cancelar".
+confirm() retorna true se o usuário clicar em "OK" e false se clicar em "Cancelar".<br>
 
-<strong>Pesquisar estrutura condicional if...else para tratar os dois casos.</p></strong>
+<strong>Dica: Pesquisar estrutura condicional if...else para tratar os dois casos.</p></strong>
 
         <input type="checkbox" id="resposta8" class="toggle">
         <label for="resposta8" class="resposta-btn">Resposta</label>
